@@ -2,6 +2,11 @@
 SVN
 ---
 
+XML:   Resolved issue CASTOR-1495 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
+       Moved successfull XML tests from Regression- to MasterTestSuite.
+       Details: http://jira.codehaus.org/browse/CASTOR-1495
+       (Ralf - 20060810)
+
 All:   Resolved issue CASTOR-1488 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
        Refactored FieldDescriptor.
        Details: http://jira.codehaus.org/browse/CASTOR-1488
